--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>Hello, I'm</span>
             <h1>Fraol Eticha</h1>
             <h2>CEO OF JFRO TRUCK DRIVING SCHOOL</h2>
-            <p>I'M NOT BOSSY , I'm the boss</p>
+            <p>I'M NOT BOSSY,I AM THE BOSS</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
  
@@ -59,7 +59,7 @@
                 <img src="121.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est perferendis dicta. Ad repellendus perferendis minus sunt error eos dicta enim accusantium ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a ratione quod!</p>
+                <p>My name is fraol eticha.  I am Ethiopian. I live in American South Dakota. I'm the CEO of Jfro truck driving school.  My joy is seeing people happy.  I like to help people, it is nice to live for people. I am happy with my current life.</p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
